use sweet ux count for "More" links in the index table footer

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,8 @@ en:
   import: Import
   item: Item
   missing: missing
+  more_records: More
+  no_more_records: No more records
   new: New
   new_model: New %{model}
   open: open
