Add hotspot to fuzzy search for getting the search table. Fixes an issue with CTI

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,7 @@ en:
   closed_at: Closed %{at}
   complete: complete
   confirm: Are you sure?
+  days: days
   delete: Delete
   done: Done
   edit: Edit
