--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,8 @@ en:
   closed_at: Closed %{at}
   complete: complete
   confirm: Are you sure?
+  copy: Copy
+  copy_of: Copy of
   days: days
   delete: Delete
   done: Done
