Initial attempt at fixing with_edit to support booleans

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,7 @@ en:
   item: Item
   missing: missing
   more_records: More
+  'no': No
   no_more_records: No more records
   notify: Notify
   new: New
@@ -50,3 +51,4 @@ en:
   search_for: Search for %{models}
   sort: Sort
   update: Update
+  'yes': Yes
